--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html>
+<title>Parkinsons</title>
 <html>
-<h3>Parkinsons</h3>
+<h3>Parkinson's</h3>
+  <button onclick="What are the Causes??">
+ <p id="01"></p>
+<script>
+function a(){
+document.getElementById("01").innerHTML = "The causes are Genetics and Dopamine decrease";
+}
+</script>   
 </html>
