--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>Parkinsons</title>
 <html>
 <h3>Parkinson's</h3>
-  <button onclick="What are the Causes??">
+  <button onclick="a()">What are the Causes??</button>
  <p id="01"></p>
 <script>
 function a(){
