--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <html>
 <h3>Parkinson's</h3>
   <button onclick="a()">What are the Causes??</button>
+  <button onclick="b()">Early Signs</button>
+  <button onclick="c()">What are the Causes??</button>
  <p id="01"></p>
 <script>
 function a(){
+document.getElementById("01").innerHTML = "The causes are Genetics and Dopamine decrease";
+}
+  function b(){
+document.getElementById("01").innerHTML = "The early signs are Tremors, Slowed Movement, Ridgid Muscles, Unable to Balance, Loss of Automatic Movements and Speach/Writing Changes";
+}
+  function c(){
+document.getElementById("01").innerHTML = "The causes are Genetics and Dopamine decrease";
+}
+  function d(){
 document.getElementById("01").innerHTML = "The causes are Genetics and Dopamine decrease";
 }
 </script>   
