--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@ document.getElementById("01").innerHTML = "The causes are Genetics and Dopamine 
   function d(){
 document.getElementById("01").innerHTML = "The causes are Genetics and Dopamine decrease";
 }
-</script>   
+</script>
+Also, I did this myself. I made this code, of which can be seen <a href="https://github.com/DC382X/Parkinsons-Reseach/blob/main/index.html">here!</a>
 </html>
